--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
+    "react-responsive-navbar": "^1.0.11",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
   },
